--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@ COLORS:
 Light green: #7ed56f
 Medium green: #55c57a
 Dark green: #28b485
-
 */
 *{
     margin: 0;
@@ -21,9 +20,41 @@ body{
 }
 
 header{
+    position: relative;
     height: 95vh;
     background: linear-gradient(to right, hsla(111, 55%, 64%, 0.801),hsla(160, 64%, 43%, 0.801)), url(../img/hero.jpg);
     background-size: cover;
     background-position: top;
-    clip-path: polygon(0 0, 100% 50%, 100% 50%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 70%, 0 100%);
+}
+
+.logo{
+    position: absolute;
+    top: 45px;
+    left: 45px;
+}
+.logo-box{    
+    height: 35px;
+}
+.text-box{
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+.heading-primary{
+    color: #fff;
+    text-transform: uppercase;
+}
+.heading-primary-main{
+    display: block;
+    font-size: 60px;
+    font-weight: 400;
+    letter-spacing: 35px;
+}
+.heading-primary-sub{
+    display: block;
+    font-size: 20px;
+    font-weight: 500;
+    letter-spacing: 35px;
 }
